src/compiler/grammar.ebnf
//! # grammar
//!
//! Provides ground truth for all language grammar
//!
//! ## Invariants
//!
//! - Forms a single source of truth for all language grammar 
//!
//! Author: Cole Francis
//!
//! Last Updated: 07/01/2026

IDENT = letter (letter | digit | "_")* ;

literal = 
      bool_literal
    | int_literal
    | real_literal 
    | math_const ;

bool_literal = "true" | "false"
int_literal = digit+ ;
real_literal = digit+ ("." digit+)? ;
math_const = "e" | "pi" ;

type = 
      "Bool"
    | "Int"
    | "Real" 
    | IDENT ;

mod_type = "Mod" "(" int_literal ")" ;

expr = 
    binary_expr
    | tuple_expr
    | block_expr
    | match_expr
    | sample_expr ;

binary_expr = comparison ;

comparison = 
    additive (("<" | ">" | "<=" | ">=") additive)* ;

additive =
    multiplicative (("+" | "-") multiplicative)* ;

multiplicative =
    unary (("*" | "/") unary )* ;

unary =
      ("-" | "~") unary 
    | exponent ;
    
exponent = 
    atom ("^" exponent)? ;

atom =
      literal
    | IDENT
    | "(" expr ")" ;

 tuple_expr =
     "(" expr "," expr ("," expr)* ")" ;

block_expr = 
    "{"
        let_stmt*
        expr
    "}" ;

let_stmt = "let" IDENT "=" expr ";" ;

match_expr =
    "match" expr "{"
        match_arm ("," match_arm)* ","?
    "}" ;

match_arm =
    pattern "=>" expr ;

pattern =
    simple_pattern ("|" simple_pattern)* ;

simple_pattern =
      "_"
    | literal
    | IDENT
    | tuple_pattern 
    | comparison_pattern ;

tuple_pattern =
    "(" simple_pattern ("," simple_pattern)+ ")" ;

comparison_pattern =
    ("<" | ">" | "<=" | ">=") expr ;

sample_expr = 
    "sample" "{"
        sample_arm ("," sample_arm)* ","?
    "}" ;

sample_arm =
    ("_" | expr) "=>" expr;

////////////////////////////////////////////////////////////////////////////////

program = (let_stmt | ent_decl | rel_decl | net_decl)* ;

////////////////////////////////////////////////////////////////////////////////

ent_decl =
    "ent_t" IDENT "=" ent_expr ";" ;

ent_expr = 
      mod_type
    | set_ent ;

set_ent = "{" IDENT ("," IDENT)* "}" ;


////////////////////////////////////////////////////////////////////////////////

rel_decl =
    "rel_t" IDENT ":" "(" param_list? ")" "->" type "=" expr ";" ;

param_list =
    param ("," param)* ;

param =
    IDENT ":" type ;

////////////////////////////////////////////////////////////////////////////////

net_decl = 
    "net" IDENT "{"
        module_item*
    "}" ";" ;

module_item = 
      input_decl
    | output_decl
    | init_decl
    | rel_inst ;

input_decl =
    "input" IDENT ":" type ";" ;

output_decl =
    "output" IDENT ":" type ";" ;

init_decl = 
    "init" IDENT ":" type "=" expr ";" ;

rel_inst = 
    IDENT ":=" IDENT "(" arg_list? ")" ";" ;
    
arg_list =
    IDENT ("," IDENT)* ;

net_inst = 
    IDENT "{" connect_list "}" ";" ;

connect_list =
    connection ("," connection)* ;

connection = 
    IDENT ":=" IDENT

/////////////////////////////////////////////////
